# ruby

./: .cirrus.yml  .clang-format  .gitignore  Cargo.toml  JIT_EXECUTION_FLOW.md  KNOWNBUGS.rb  NEWS.md  README.md  addr2line.c  alloc.rb  array.c  array.rb  ast.c  bignum.c  box.c  builtin.c  builtin.h  class.c  common.mk  compar.c  compile.c  complex.c  concurrent_set.c  configure.ac  constant.h  cont.c  darray.h  dary.h  debug.c  debug_counter.c  debug_counter.h  depend  dir.c  dln.c  dln.h  dln_find.c  encindex.h  encoding.c  enum.c  enumerator.c  (+158 more)
benchmark/: vm_ivar_get.yml  vm_ivar_memoize.yml
bootstraptest/: test_fork.rb  test_method.rb  test_ractor.rb  test_yjit.rb  test_yjit_new_backend.rb
custom/: rubygc.c
cygwin/: GNUmakefile.in
defs/: id.def
doc/: .document  concurrency_guide.md  memory.md
enc/: ascii.c  big5.c  cesu_8.c  cp949.c  emacs_mule.c  euc_jp.c  euc_kr.c  euc_tw.c  gb18030.c  gbk.c  iso_8859_1.c  iso_8859_10.c  iso_8859_11.c  iso_8859_13.c  iso_8859_14.c  iso_8859_15.c  iso_8859_16.c  iso_8859_2.c  iso_8859_3.c  iso_8859_4.c  iso_8859_5.c  iso_8859_6.c  iso_8859_7.c  iso_8859_8.c  iso_8859_9.c  koi8_r.c  koi8_u.c  mktable.c  shift_jis.c  shift_jis.h  unicode.c  us_ascii.c  utf_16be.c  utf_16le.c  utf_32be.c  utf_32le.c  utf_8.c  windows_1250.c  windows_1251.c  windows_1252.c  (+4 more)
gc/: default.c  epsilon.c  gc.h  mmtk.c  mmtk.h  noop.c
gems/: abbrev-0.1.2.gem  base64-0.2.0.gem  benchmark-0.4.0.gem  bigdecimal-3.1.9.gem  bundled_gems  csv-3.3.4.gem  debug-1.10.0.gem  drb-2.2.1.gem  fiddle-1.1.8.gem  getoptlong-0.2.1.gem  irb-1.15.2.gem  logger-1.7.0.gem  minitest-5.25.5.gem  mutex_m-0.3.0.gem  net-ftp-0.3.8.gem  net-imap-0.5.8.gem  net-pop-0.1.2.gem  net-smtp-0.5.1.gem  nkf-0.2.0.gem  observer-0.1.2.gem  ostruct-0.6.1.gem  power_assert-2.0.5.gem  power_assert-2.0.6dev.gem  prime-0.1.3.gem  pstore-0.2.0.gem  racc-1.8.1.gem  rake-13.2.1.gem  rbs-3.9.4.gem  rbs-4.0.0.dev.2.gem  rbs-4.0.0.dev.4.gem  rdoc-6.14.0.gem  readline-0.0.4.gem  reline-0.6.1.gem  repl_type_completor-0.1.11.gem  resolv-replace-0.1.1.gem  rexml-3.4.1.gem  rinda-0.2.0.gem  rss-0.3.1.gem  syslog-0.3.0.gem  test-unit-3.6.8.gem  (+2 more)
include/: ruby.h
internal/: array.h  basic_operators.h  bignum.h  bits.h  class.h  cmdlineopt.h  compar.h  cont.h  (+34 more)
zjit/: Cargo.toml  build.rs
zjit/bindgen/src/: main.rs
zjit/src/: codegen.rs  codegen_tests.rs  cruby.rs  cruby_bindings.inc.rs  cruby_methods.rs  disasm.rs  disasm_aarch64.rs  disasm_x86_64.rs  gc.rs  hir.rs  invariants.rs  lib.rs  options.rs  payload.rs  profile.rs  state.rs  stats.rs
zjit/src/asm/: mod.rs
zjit/src/asm/arm64/: mod.rs
zjit/src/asm/x86_64/: tests.rs
zjit/src/backend/: lir.rs
zjit/src/backend/arm64/: mod.rs
zjit/src/backend/x86_64/: mod.rs
zjit/src/hir/: opt_tests.rs  tests.rs
zjit/src/hir_type/: mod.rs
(+707 files in other folders)
