# Using Cargo's workspace feature to build all the Rust code in
# into a single package.
# TODO(alan) notes about rust version requirements. Undecided yet.

[workspace]
members = ["zjit", "yjit"]

[package]
name = "jit"
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"
publish = false # Don't publish to crates.io

[dependencies]
yjit = { path = "yjit", optional = true }
zjit = { path = "zjit", optional = true }

[lib]
crate-type = ["staticlib"]
path = "jit.rs"

[features]
disasm = ["yjit?/disasm", "zjit?/disasm"]
runtime_checks = ["yjit?/runtime_checks", "zjit?/runtime_checks"]
yjit = [ "dep:yjit" ]
zjit = [ "dep:zjit" ]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.dev_nodebug]
inherits = "dev"

[profile.stats]
inherits = "release"

[profile.release]
# NOTE: --enable-yjit and zjit builds use `rustc` without going through Cargo. You
# might want to update the `rustc` invocation if you change this profile.
opt-level = 3
# The extra robustness that comes from checking for arithmetic overflow is
# worth the performance cost for the compiler.
overflow-checks = true
# Generate debug info
debug = true
# Use ThinLTO. Much smaller output for a small amount of build time increase.
lto = "thin"

[workspace.lints.clippy]
correctness = { level = "forbid", priority = 1 }
suspicious = { level = "forbid", priority = 1 }
perf = { level = "forbid", priority = 1 }

complexity = { level = "deny", priority = -1 }

style = { level = "allow", priority = -1 }
pedantic = { level = "allow", priority = -1 }
restriction = { level = "allow", priority = -1 }

too_many_arguments = "allow"
identity_op = "allow"

ptr_arg = "forbid"
ref_option = "forbid"
inefficient_to_string = "forbid"
from_over_into = "forbid"
unwrap_or_default = "forbid"
redundant_static_lifetimes = "forbid"
match_like_matches_macro = "forbid"
field_reassign_with_default = "forbid"
inherent_to_string = "forbid"
owned_cow = "forbid"
redundant_clone = "forbid"
str_to_string = "forbid"
single_char_pattern = "forbid"
single_char_add_str = "forbid"
unnecessary_owned_empty_strings = "forbid"
manual_string_new = "forbid"
