[package]
name = "zjit"
version = "0.0.1"
edition = "2024"
rust-version = "1.85.0" # Minimally supported rust version
publish = false         # Don't publish to crates.io

[dependencies]
jit = { version = "0.1.0", path = "../jit" }

[dev-dependencies]
insta = "1.43.1"
rand = "0.9"

# NOTE: Development builds select a set of these via configure.ac
# For debugging, `make V=1` shows exact cargo invocation.
[features]
# Support --zjit-dump-disasm using built-in disassembler.
disasm = []
runtime_checks = []
stats_allocator = []
